[tool.poetry]
name = "kayak-scrawler"
version = "0.1.0"
description = "selenium and bs4 crawler + scraper to obtain flight listing info from kayak.com"
authors = ["bkataru <baalateja.k@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.12"
selenium = "^4.18.1"
bs4 = "^0.0.2"
fake-useragent = "^1.4.0"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"